Prevent tr height flickering

--- a/app/assets/stylesheets/active_admin/active_admin_globalize_flags.css.sass
+++ b/app/assets/stylesheets/active_admin/active_admin_globalize_flags.css.sass
@@ -50,3 +50,7 @@ div.field-translation
   +border-top-radius(4px)
   +border-bottom-radius(6px)
   min-height: 80px
+
+// prevent tr height flickering
+span.field-translation.empty
+  vertical-align: bottom
